kubernetes/mongostack/mongoexpressdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploymongoexpress

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoexpress

  template:
    metadata:
      labels:
        app: mongoexpress

    spec:
      containers:
        - name: mongoexpress
          image: mongo-express
          ports:
            - containerPort: 8081
---
apiVersion:   v1
kind: Service
metadata:
  name: mongoexpress-service

spec:
  selector:
    app: mongoexpress
  
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
