kubernetes/mongostack/mongoingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mongo-ingress

  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  tls:
  - hosts:
    - prepdigigroup.com
    secretName: tls-secret

  rules:
  - host: mongo.prepdigigroup.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: mongoexpress-service
          servicePort: 8081
